@startuml
class Produit {
    - std::string _description
    - double _prix
    + Produit()
    + Produit(std::string description, double prix)
    + std::string getDescription() const
    + void setDescription(std::string description)
    + double getPrix() const
    + void setPrix(double prix)
}

class LigneFacture {
    - Produit _produit
    - int _quantite
    + LigneFacture()
    + LigneFacture(Produit produit, int quantite)
    + Produit getProduit() const
    + void setProduit(Produit produit)
    + int getQuantite() const
    + void setQuantite(int quantite)
    + void afficher() const
}

class Facture {
    - LigneFacture *_lignes
    - size_t _nombreLignes
    - size_t _tailleTableau
    + Facture()
    + ~Facture()
    + size_t getNombreLignes() const
    + void ajouterLigne(Produit produit, int quantite)
    + LigneFacture getLigne(size_t index) const
    + double getTotal() const
}

' Relations
LigneFacture "1" -- "1" Produit : contient >
Facture "1" -- "*" LigneFacture : contient >
@enduml
